      also for numeric fields.
    * tbl_replace.php: UNIX_TIMESTAMP can take optional parameter (bug
      #1039193).
    * server_privileges.php: Make non-js checkall work also for adding new
      user (bug #1028055).
    * libraries/zip.lib.php: Drop unneed part of header which causes troubles
      to some programs (bug #1037737).
    * index.php: Add frame spacing (RFE #1036013).

2004-10-17 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/turkish update, thanks to boralioglu.
    * lang/estonian: Update thanks to Alvar Soome - finsoft.

2004-10-16 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/dbi/mysqli.dbi.lib.php: support for compressed protocol
      and CLIENT_LOCAL_FILES in mysqli

2004-10-15 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_schema.php: new way to define font path,
      needed with the new fpdf library; also now output inline,
      I find it faster this way, please tell me if you prefer
      the old dialog method and why.
    * tbl_change.php: bug #1038401, tabbing from value to value
    * sql.php: detect this case:
      SELECT DISTINCT x AS foo, y AS bar FROM sometable
      and count rows correctly (in MySQL 3),
      thanks to Matthias Pigulla (mp@webfactory.de)
    * server_privileges.php: cosmetic: title for Edit privileges
    * lang/galician: Updated, thanks to Xosé Calvo.
    * lang/italian: Updates, thanks to Pietro Danesi
    * lang/norwegian: Update, thanks to Sven-Erik Andersen

2004-10-13 Michal Čihař  <michal@cihar.com>
    * libraries/fpdf/fpdf.php: Updated to 1.52.

2004-10-13 Alexander M. Turek  <me@derrabus.de>
    * Documentation.html: Mike Beck's e-mail address has changed.

2004-10-13 Michal Čihař  <michal@cihar.com>
    * lang/sync_lang.sh: Do not overwrite utf-8 files in some cases.
    * lang/czech: Fix some translations.
    * libraries/transformations/text_plain__external.inc.php: Handle better
      backslash.
    * themes/*/img/*.gif: Remove unused gif images.
